<resources>
    <string name="app_name">Zoo</string>
    <string name="title_activity_zoo">ZooActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="change_view_main">Go back to Main Menu</string>
    <string name="change_view_zoo">Go to Zoo</string>
    <string name="change_view_zoo_delete">Delete a zoo</string>
    <string name="change_view_zoo_create">Create a new zoo</string>
    <string name="change_view_zoo_read">Show zoo information</string>
    <string name="title_activity_create">CreateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="change_view_animal_update">Update animal</string>
    <string name="change_view_animal_delete">Delete animal</string>
    <string name="change_view_animal_create">Create animal</string>
    <string name="change_view_animal_read">Show animal information</string>
    <string name="change_view_animal">Go to animal</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="read">Read</string>
    <string name="change_view_species_update">Update species</string>
    <string name="change_view_species_delete">Delete species</string>
    <string name="change_view_species_read">Show species information</string>
    <string name="change_view_species_create">Create species</string>
    <string name="change_view_species">Go to Species</string>
    <string name="insert">Insert</string>
    <string name="id">ID</string>
    <string name="vulgar_name">Vulgar name</string>
    <string name="sex">Sex</string>
    <string name="continent">Continent</string>
    <string name="country">Country</string>
    <string name="birth">Birth Year</string>
    <string name="zoo">Zoo</string>
    <string name="species">Species</string>
    <string name="yearlyinc">YearlyInc</string>
    <string name="size">Size</string>
    <string name="city">City</string>
    <string name="name">Name</string>
</resources>