<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".zoo.view.species.SpeciesActivity">

    <Button
        android:id="@+id/changeViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:onClick="changeMainView"
        android:text="@string/change_view_main"
        app:layout_constraintBottom_toTopOf="@+id/changeViewSpeciesRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changeViewSpeciesUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="53dp"
        android:onClick="changeUpdateSpeciesView"
        android:text="@string/change_view_species_update"
        app:layout_constraintBottom_toTopOf="@+id/changeViewMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changeViewSpeciesDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="56dp"
        android:onClick="changeDeleteSpeciesView"
        android:text="@string/change_view_species_delete"
        app:layout_constraintBottom_toTopOf="@+id/changeViewSpeciesCreate"
        app:layout_constraintStart_toStartOf="@+id/changeViewSpeciesCreate" />

    <Button
        android:id="@+id/changeViewSpeciesCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="65dp"
        android:onClick="changeCreateSpeciesView"
        android:text="@string/change_view_species_create"
        app:layout_constraintBottom_toTopOf="@+id/changeViewSpeciesUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changeViewSpeciesRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="155dp"
        android:onClick="changeReadSpeciesView"
        android:text="@string/change_view_species_read"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>