<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".zoo.view.animals.AnimalsActivity">

    <Button
        android:id="@+id/changeViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:onClick="changeMainView"
        android:text="@string/change_view_main"
        app:layout_constraintBottom_toTopOf="@+id/changeViewZooRead"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changeViewZooUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:onClick="changeUpdateView"
        android:text="@string/change_view_animal_update"
        app:layout_constraintBottom_toTopOf="@+id/changeViewMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changeViewZooDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="52dp"
        android:onClick="changeDeleteView"
        android:text="@string/change_view_animal_delete"
        app:layout_constraintBottom_toTopOf="@+id/changeViewZooCreate"
        app:layout_constraintEnd_toEndOf="@+id/changeViewZooCreate" />

    <Button
        android:id="@+id/changeViewZooCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:onClick="changeCreateView"
        android:text="@string/change_view_animal_create"
        app:layout_constraintBottom_toTopOf="@+id/changeViewZooUpdate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/changeViewZooRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="155dp"
        android:onClick="changeReadView"
        android:text="@string/change_view_animal_read"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>