<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".zoo.view.ZoosActivity">

    <Button
        android:id="@+id/changeViewMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeMainView"
        android:text="@string/change_view_main"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="7dp"
        tools:layout_editor_absoluteY="233dp" />

    <Button
        android:id="@+id/changeViewZooUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeUpdateZooView"
        android:text="@string/change_view_zoo_update"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="160dp" />

    <Button
        android:id="@+id/changeViewZooDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeCreateZooView"
        android:text="@string/change_view_zoo_delete"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="42dp" />

    <Button
        android:id="@+id/changeViewZooCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeDeleteZooView"
        android:text="@string/change_view_zoo_create"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="44dp"
        tools:layout_editor_absoluteY="97dp" />

    <Button
        android:id="@+id/changeViewZooRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeReadZooView"
        android:text="@string/change_view_zoo_read"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="299dp" />
</androidx.constraintlayout.widget.ConstraintLayout>